@@ -27,7 +27,7 @@ dependencies {
     implementation("io.ktor:ktor-server-config-yaml:${libs.versions.ktor.get()}")
     implementation("io.ktor:ktor-server-metrics:${libs.versions.ktor.get()}")
     implementation("io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.21.0")
-    implementation("io.opentelemetry:opentelemetry-api:1.55.0")
+    implementation("io.opentelemetry:opentelemetry-api:1.56.0")
     implementation("io.getunleash:unleash-client-java:11.1.1")
 
     testImplementation(kotlin("test"))
@@ -36,7 +36,7 @@ dependencies {
     testImplementation(libs.mockk)
     testImplementation(libs.mock.oauth2.server)
     testImplementation(libs.ktor.client.mock)
-    testImplementation("org.junit.jupiter:junit-jupiter-params:6.0.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:6.0.1")
     testImplementation("io.ktor:ktor-server-test-host-jvm:${libs.versions.ktor.get()}")
     testImplementation(libs.rapids.and.rivers.test)
     testImplementation("org.testcontainers:kafka:1.21.3")
@@ -44,6 +44,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
 }
 kotlin {
     jvmToolchain(21)
